--- a/XYZReader/src/main/res/layout-v21/article_detail_toolbar.xml
+++ b/XYZReader/src/main/res/layout-v21/article_detail_toolbar.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/toolbar_image_height"
             android:scaleType="centerCrop"
+            android:contentDescription="@string/content_description_article_image"
             app:layout_collapseMode="parallax"/>
 
         <android.support.v7.widget.Toolbar
